refactored reflection util; added circular dependency check for grain methods; moved @AnnotatedBy functionality to @Inject